2009-08-19  Jackson Harper  <jackson@ximian.com>

	* playlist.cpp: Its possible to queue an async operation and then
	call Dispose before that operation has taken place. This patch
	makes Playlist delay its unref and adds guards in its async
	callback functions to avoid this. Fixes http://www.nederland24.nl/
	r:spouliot
	
2009-08-18  Jackson Harper  <jackson@ximian.com>

	* template.cpp: Remove not very helpful and somewhat scary looking
	debug spew. r:toshok

2009-08-18  Jeffrey Stedfast  <fejj@novell.com>

	* layout.cpp (word_type_changed): Partial revert for previous
	commit as it broke drt #208.

	r:toshok

2009-08-17  Jeffrey Stedfast  <fejj@novell.com>

	Fixes for drt #411.

	* layout.cpp (SetMaxWidth): If setting MaxWidth to 0, treat it as
	infinite.
	(word_type_changed): Allow alphabetic characters inside
	ideographic words.
	(layout_word_wrap): Allow line advance to equal max width.

	r:toshok

2009-08-18  Alan McGovern  <amcgovern@novell.com>

	* grid.h:
	* grid.cpp: Remove the 'magic' size as size allocations are
	  read from row_matrix/col_matrix now. r: kangaroo

2009-08-18  Alan McGovern  <amcgovern@novell.com>

	* grid.h:
	* grid.cpp: Allocate sizes of the grid segments in the correct
	  order. r: shana

2009-08-17  Alan McGovern  <amcgovern@novell.com>

	* grid.h:
	* grid.cpp: When allocating sizes for rows/columns, clamp the
	  sizes between the Min and Max values in a consistent manner.
	  r: jackson

2009-08-17  Alan McGovern  <amcgovern@novell.com>

	* grid.h:
	* grid.cpp: Change the parameter order in the Segment
	  constructors to be "value, min, max" to be consistent with
	  how 'CLAMP' is usually defined. r: jackson

2009-08-16  Chris Toshok  <toshok@ximian.com>

	* xaml.cpp (value_from_str_with_parser): fix the abundant memory
	leaks in this method.

	* propertypath.h (struct PropertyPath): add a copy constructor
	here so the xaml.cpp changes work without crashing.

	r: andreia

2009-08-16  Chris Toshok  <toshok@ximian.com>
